# hymenium

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  architecture.md
docs/plans/: README.md
src/: classify.rs  context.rs  failure.rs  lib.rs  main.rs  outcome.rs  outcomes.rs  retry.rs  store.rs  sweeper.rs
src/commands/: cancel.rs  complete.rs  decompose.rs  dispatch.rs  fail.rs  mod.rs  reconcile.rs  resume.rs  status.rs
src/decompose/: algorithm.rs  effort.rs  mod.rs  render.rs
src/dispatch/: capability.rs  capability_client.rs  cli.rs  mock.rs  mod.rs  orchestrate.rs  task_packet.rs
src/monitor/: handler.rs  mod.rs  progress.rs
src/parser/: markdown.rs  metadata.rs  mod.rs
src/workflow/: engine.rs  gate.rs  mod.rs  template.rs
tests/: dispatch_trust_boundary.rs  parser_test.rs  phase_reconciliation.rs  workflow_gate_integration.rs  workflow_template_v1.rs
tests/fixtures/: centralcommand-umbrella.md  crate-scaffold.md  session-end-hook-old-format.md  sub-task-hierarchy.md
